# FEMMI

./: .gitignore  IMPLEMENTATION_PLAN.md  MATH.md  README.md  pyproject.toml  run.sh  setup.py
examples/: benchmark.py  demo_p3_pipeline.py  generate_presentation_figures.py  pme_talk_plots.py  smpy_comparison.py  visualize_results.py
femmi/: __init__.py  assembly.py  autodiff_integration.py  basis.py  bem.py  fem_solver.py  forward.py  inverse.py  mesh.py  mesh_generator.py  operators.py  p3_assembly.py  p3_mesh_generator.py  p3_shape_functions.py  regularization.py  svd_analysis.py  types.py
src/: __init__.py  fem.py  forward.py  inverse.py  p3_assembly.py
tests/: .test_benchmark.py.swp  __init__.py  demo_p3_pipeline.py  example.py  test_benchmark.py  test_convergence.py  test_convergence_p1.py  test_convergence_p3.py  test_coupled_pipeline.py  test_factorization.py  test_fem_bem_coupling.py  test_morozov.py  test_pipeline.py  test_regression.py  test_smpy_femmi_comparison.py  validation.py  validation_p3.py
weak_lensing_poisson.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: index.md
web/js/: fem-assembly-demo.js  fem-mesh-demo.js  fem-solver-demo.js
